hotfix: CORS 설정 단순화 및 OPTIONS 요청 허용
- CORS 설정을 SecurityConfig에 직접 통합
- CORS 허용 HTTP 메서드 목록 업데이트
- SecurityConfig에서 모든 엔드포인트의 OPTIONS 요청 허용